# QGeoView

./: CMakeLists.txt
demo/: CMakeLists.txt  demo.pro  mainwindow.cpp  mainwindow.h  windowExeIcon.rc
demo/samples/: QGVWidgetColorBar.cpp  QGVWidgetColorBar.h  clusteringMarkersDemo.cpp  clusteringMarkersDemo.h  colorMap.cpp  colorMap.h  colorMapPresetDialog.cpp  colorMapPresetDialog.h  colorMapPresetDialog.ui  colorMapPresetToPixmap.cpp  colorMapPresetToPixmap.h  colorMapPresets.cpp  colorMapPresets.h  geotiffDemo.cpp  geotiffDemo.h  pathColoring.cpp  pathColoring.h  placemarkCluster.cpp  placemarkCluster.h  placemarkPixmap.cpp  placemarkPixmap.h  placemarkSet.cpp  placemarkSet.h  placemarkSetLayer.cpp  placemarkSetLayer.h  polyline.cpp  polyline.h  raster.cpp  raster.h  rescaleRangeDialog.cpp  rescaleRangeDialog.h  rescaleRangeDialog.ui
demo/samples/ColorMap/: ColorMaps.cpp  ColorMaps.h
lib/: CMakeLists.txt
lib/src/: QGVWidgetScale.cpp
